--- a/package.json
+++ b/package.json
@@ -6,8 +6,19 @@
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
-    "async": "~0.2.8",
-    "express": "~3.2.4",
-    "socket.io": "~0.9.14"
+		"express": "~4.13.3",
+		"morgan": "~1.6.1",
+		"compression": "~1.6.0",
+		"body-parser": "~1.14.1",
+		"method-override": "~2.3.5",
+		"express-session": "~1.11.3",
+		"ejs": "~2.3.4",
+		"connect-flash": "~0.1.1",
+		"mongoose": "~4.1.10",
+		"passport": "~0.3.0",
+		"passport-local": "~1.0.0",
+		"passport-facebook": "~2.0.0",
+		"passport-twitter": "~1.0.3",
+		"passport-google-oauth": "~0.2.0"
   }
 }
